--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@ h1{
 <h1>5 Bài Thực Hành JS</h1>
 
 <div class="menu">
-<a href="tk4.html">Bài TK4 - Tab View</a>
-<a href="tk5.html">Bài TK5 - Accordion</a>
-<a href="k3.html">Bài K3 - Password Match</a>
-<a href="k7.html">Bài K7 - Parallax</a>
-<a href="k8.html">Bài K8 - BMI</a>
+<a href="TK4.html">Bài TK4 - Tab View</a>
+<a href="TK5.html">Bài TK5 - Accordion</a>
+<a href="K3.html">Bài K3 - Password Match</a>
+<a href="K7.html">Bài K7 - Parallax</a>
+<a href="K8.html">Bài K8 - BMI</a>
 </div>
 
 </div>
